changed colors and fixed sizing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
           <ul>
             <li>
-              <a href="#identity">Who We Are</a>
+              <a href="#whoWeAre">Who We Are</a>
             </li>
             <li>
               <a href="#book">Actions</a>
@@ -25,8 +25,17 @@
         </nav>
       </header>
       <div class="mainSection">
-      <div class="intro">
-        <img class="background" src="./Resources/Img/ChemistryFlasks.png"/>
+      <div class="content">
+        <div>
+          <h1><a href="#"><em>Alchemists</em></a></h1>
+          <h3><a href="#"><em>A community of Chemistry Students and more...</em></a></h3>
+        </div>
+      </div>
+      </div>
+      <div class="divider">
+      </div>
+      <div id="whoWeAre">
+        <h2>Who We Are</h2>
       </div>
 </body>
 </html>
