added slight changes to main page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,22 @@
       <div class="divider">
       </div>
       <div id="whoWeAre">
+        <div>
         <h2>Who We Are</h2>
+        <p>Είμαστε μια κοινώτητα από φοιτητές του τμήματος Χημείας....</p>
+        </div>
+        <div>
+        <img src="./Resources/Img/ChemistryFlasksClear.jpeg"/>
+      </div>
+      </div>
+      <div id="actions">
+        <div>
+        <img src="./Resources/Img/chemistryLabBackgroundCropped.png"/>
+        </div>
+        <div>
+        <h2>Current Actions:</h2>
+        <p>There are no current actions taking place.</p>
+      </div>
       </div>
 </body>
 </html>
