Added other parts of the website

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         <nav>
           <ul>
             <li>
-              <a href="#whoWeAre">Who We Are</a>
+              <a href="#whoWeAre">Ποιοί Είμαστε</a>
             </li>
             <li>
-              <a href="#book">Actions</a>
+              <a href="#actions">Δράσεις</a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
+              <a href="#help">Βοήθεια φοιτητών</a>
+            </li>
+            <li>
+              <a href="#contact">Επικοινωνία</a>
             </li>
           </ul>
         </nav>
@@ -27,30 +30,72 @@
       <div class="mainSection">
       <div class="content">
         <div>
-          <h1><a href="#"><em>Alchemists</em></a></h1>
-          <h3><a href="#"><em>A community of Chemistry Students and more...</em></a></h3>
+          <h1><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Alchemists</em></a></h1>
+          <h3><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Μια κοινώτητα φοιτητών που αγαπούν την επιστήμη τους...</em></a></h3>
         </div>
       </div>
       </div>
       <div class="divider">
       </div>
       <div id="whoWeAre">
-        <div>
-        <h2>Who We Are</h2>
-        <p>Είμαστε μια κοινώτητα από φοιτητές του τμήματος Χημείας....</p>
+        <div class="subjectBlock">
+        <h2><em>Ποιοί Είμαστε</em></h2>
+        <p>Είμαστε μια κοινώτητα από φοιτητές του τμήματος Χημείας...</p>
         </div>
-        <div>
+        <div class="subjectBlock">
         <img src="./Resources/Img/ChemistryFlasksClear.jpeg"/>
       </div>
       </div>
+      <div class="divider">
+      </div>
       <div id="actions">
-        <div>
+        <div class="subjectBlock">
         <img src="./Resources/Img/chemistryLabBackgroundCropped.png"/>
         </div>
-        <div>
-        <h2>Current Actions:</h2>
-        <p>There are no current actions taking place.</p>
+        <div class="subjectBlock">
+        <h2>Τωρινές Δράσεις:</h2>
+        <p>Δεν υπάρχουν προγραμματισμένες δράσεις αυτή την περίοδο.</p>
       </div>
+      </div>
+      <div class="divider">
+      </div>
+      <div id="help">
+        <div class="subjectBlock">
+          <h2><em>Βοήθεια Φοιτητών</em></h2>
+          <p>Στο πρόγραμμα βοήθειας των φοιτητών προσφέρουμε...</p>
+          </div>
+        <div class="subjectBlock">
+        <img src="./Resources/Img/WhiteBoard.avif"/>
+      </div>
+      </div>
+      <div class="divider">
+      </div>
+      <div id="contact">
+        <h2>Επικοινωνία</h2>
+      <div class="contactCards">
+      <div>
+        <h3>Γενικές Πληροφορίες</h3>
+        <p>Τηλέφωνο: (+30) 6909936902</p>
+        <p>email: kosmasamsok03@gmail.com</p>
+      </div>
+      <div>
+        <h3>Βοήθεια Φοιτητών</h3>
+        <p>Τηλέφωνο 1: (+30) 6909936902</p>
+        <p>Τηλέφωνο 2: (+30) 6909936902</p>
+        <p>Τηλέφωνο 3: (+30) 6909936902</p>
+        <p>email: kosmasamsok03@gmail.com</p>
+      </div>
+      <div>
+        <h3>Εγγραφη στην ομάδα μας</h3>
+        <p>Τηλέφωνο: (+30) 6909936902</p>
+        <p>email: kosmasamsok03@gmail.com</p>
+      </div>
+    </div>
+    <div class="BackToTop">
+      <div class="buttonTop">
+      <p>Back to top </p>
+    </div>
+    </div>
       </div>
 </body>
 </html>
