added click to top button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
       </header>
-      <div class="mainSection">
+      <div class="mainSection" id="intro">
       <div class="content">
         <div>
           <h1><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Alchemists</em></a></h1>
@@ -91,10 +91,8 @@
         <p>email: kosmasamsok03@gmail.com</p>
       </div>
     </div>
-    <div class="BackToTop">
-      <div class="buttonTop">
-      <p>Back to top </p>
-    </div>
+    <div class="buttonTop">
+      <button id="buttonTop" onclick="location.href ='kosmaspefanis.github.io/Alchemists/#intro'"> Back to top </button>
     </div>
       </div>
 </body>
