--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="buttonTop">
-      <button id="buttonTop" onclick="location.href ='kosmaspefanis.github.io/Alchemists/#intro'"> Back to top </button>
+      <button id="buttonTop" onclick="location.href ='/#intro'"> Back to top </button>
     </div>
       </div>
 </body>
