fixed weird yellow sidebar glitch

--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
         <p>email: kosmasamsok03@gmail.com</p>
       </div>
     </div>
+    <div class="buttonGrid">
     <div class="buttonTop">
       <button id="buttonTop" onclick="location.href ='/Alchemists/#intro'"> Back to top </button>
     </div>
       </div>
+      <div class="divider">
+      </div>
+    </div>
 </body>
 </html>
