changed colors and added favicon and logo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alchemists</title>
     <link rel="stylesheet" type="text/css" href="./Resources/Css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./Resources/favicon/favicon.ico">
 </head>
 <body>
     <header>
-      <img class="logo" src="#"/>
+      <img class="logo" onclick="location.assign('https://www.instagram.com/__alchemists_/')" src="./Resources/favicon/favicon.ico"/>
         <nav>
           <ul>
             <li>
@@ -28,7 +29,7 @@
         </nav>
       </header>
       <div class="mainSection" id="intro">
-      <div class="content">
+      <div class="content" onclick="location.assign('https://www.instagram.com/__alchemists_/')">
         <div>
           <h1><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Alchemists</em></a></h1>
           <h3><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Μια κοινώτητα φοιτητών που αγαπούν την επιστήμη τους...</em></a></h3>
