added different logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-      <img class="logo" onclick="location.assign('https://www.instagram.com/__alchemists_/')" src="./Resources/favicon/favicon.ico"/>
+      <img class="logo" onclick="location.assign('https://www.instagram.com/__alchemists_/')" src="./Resources/Img/chemistryLogo.png"/>
         <nav>
           <ul>
             <li>
