added burger and begun fixing how reactive the website is

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
               <a href="#contact">Επικοινωνία</a>
             </li>
           </ul>
+          <section class="p-menu1">
+            <nav id="navbar" class="navigation" role="navigation">
+              <input id="toggle1" type="checkbox" />
+              <label class="hamburger1" for="toggle1">
+                <div class="top"></div>
+                <div class="meat"></div>
+                <div class="bottom"></div>
+              </label>
+            
+              <nav class="menu1">
+                <a class="link1" href="#whoWeAre">Ποιοί Είμαστε</a>
+                <a class="link1" href="#actions">Δράσεις</a>
+                <a class="link1" href="#help">Βοήθεια φοιτητών</a>
+                <a class="link1" href="#contact">Επικοινωνία</a>
+              </nav>
+          </nav>
+          </section>
         </nav>
       </header>
       <div class="mainSection" id="intro">
@@ -40,8 +57,8 @@
       </div>
       <div id="whoWeAre">
         <div class="subjectBlock">
-        <h2><em>Ποιοί Είμαστε</em></h2>
-        <p>Είμαστε μια κοινώτητα από φοιτητές του τμήματος Χημείας...</p>
+        <h2><em>Ποιοί Είμαστε</em></h->
+        <p>Είμαστε μια κοινότητα από φοιτητές του τμήματος Χημείας...</p>
         </div>
         <div class="subjectBlock">
         <img src="./Resources/Img/ChemistryFlasksClear.jpeg"/>
