Rescaled some aspects of navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <img class="logo" onclick="location.assign('https://www.instagram.com/__alchemists_/')" src="./Resources/Img/chemistryLogo.png"/>
-        <nav>
+        <nav class="mainNav">
           <ul>
             <li>
               <a href="#whoWeAre">Ποιοί Είμαστε</a>
