fixed mobile version

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
       </div>
       <div id="whoWeAre">
         <div class="subjectBlock">
-        <h2><em>Ποιοί Είμαστε</em></h->
+        <h2><em>Ποιοί Είμαστε</em></h2>
         <p>Είμαστε μια κοινότητα από φοιτητές του τμήματος Χημείας...</p>
         </div>
-        <div class="subjectBlock">
-        <img src="./Resources/Img/ChemistryFlasksClear.jpeg"/>
+        <div class="subjectBlock subjectImg">
+        <img src="./Resources/Img/ChemistryFlasksClear.jpeg" class="blockImg"/>
       </div>
       </div>
       <div class="divider">
       </div>
       <div id="actions">
-        <div class="subjectBlock">
-        <img src="./Resources/Img/chemistryLabBackgroundCropped.png"/>
+        <div class="subjectBlock subjectImg">
+        <img src="./Resources/Img/chemistryLabBackgroundCropped.png" class="blockImg"/>
         </div>
         <div class="subjectBlock">
-        <h2>Τωρινές Δράσεις:</h2>
+        <h2><em>Τωρινές Δράσεις:</em></h2>
         <p>Δεν υπάρχουν προγραμματισμένες δράσεις αυτή την περίοδο.</p>
       </div>
       </div>
@@ -82,8 +82,8 @@
           <h2><em>Βοήθεια Φοιτητών</em></h2>
           <p>Στο πρόγραμμα βοήθειας των φοιτητών προσφέρουμε...</p>
           </div>
-        <div class="subjectBlock">
-        <img src="./Resources/Img/WhiteBoard.avif"/>
+        <div class="subjectBlock subjectImg">
+        <img src="./Resources/Img/WhiteBoard.avif" class="blockImg"/>
       </div>
       </div>
       <div class="divider">
