--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="content" onclick="location.assign('https://www.instagram.com/__alchemists_/')">
         <div>
           <h1><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Alchemists</em></a></h1>
-          <h3><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Μια κοινώτητα φοιτητών που αγαπούν την επιστήμη τους...</em></a></h3>
+          <h3><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Μια κοινότητα φοιτητών που αγαπούν την επιστήμη τους...</em></a></h3>
         </div>
       </div>
       </div>
