Added browse Button

--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
       </div>
       <div class="divider">
       </div>
+      <div id="ChemistryContent">
+        <div>
+          <h2>Browse Chemistry Content</h2>
+        </div>
+        <div>
+          <p>All of the following posts, articles, presentations and videos were created 
+            by university students and can also be found on our instagram account and other social media.</p>
+        </div>
+        <div class="browse">
+          <a href="./Main/content.html">Browse Content</a>
+        </div>
+      </div>
+      <div class="divider">
+      </div>
       <div id="contact">
         <h2>Επικοινωνία</h2>
       <div class="contactCards">
