--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
         <p>email: kosmasamsok03@gmail.com</p>
       </div>
     </div>
-    <div class="buttonGrid">
     <div class="buttonTop">
-      <button id="buttonTop" onclick="location.href ='/Alchemists/#intro'"> Back to top </button>
+      <a href='#intro'> Back to top </a>
     </div>
-      </div>
       <div class="divider">
       </div>
     </div>
