Changed color of content

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="mainSection" id="intro">
       <div class="content" onclick="location.assign('https://www.instagram.com/__alchemists_/')">
         <div>
-          <h1><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Alchemists</em></a></h1>
-          <h3><a href="https://www.instagram.com/__alchemists_/" target=_blank><em>Μια κοινότητα φοιτητών που αγαπούν την επιστήμη τους...</em></a></h3>
+          <h1><em>Alchemists</em></h1>
+          <h3><em>Μια κοινότητα φοιτητών που αγαπούν την επιστήμη τους...</em></h3>
         </div>
       </div>
       </div>
