fixed nav in second page

--- a/Main/content.html
+++ b/Main/content.html
@@ -14,16 +14,16 @@
         <nav class="mainNav">
           <ul>
             <li>
-              <a href="#whoWeAre">Ποιοί Είμαστε</a>
+              <a href="#">Βιοχημεία</a>
             </li>
             <li>
-              <a href="#actions">Δράσεις</a>
+              <a href="#">Χημικές Ενώσεις</a>
             </li>
             <li>
-              <a href="#help">Βοήθεια φοιτητών</a>
+              <a href="#">Χημεία στην Καθημερινότητα</a>
             </li>
             <li>
-              <a href="#contact">Επικοινωνία</a>
+              <a href="../index.html">Πίσω στην Αρχική</a>
             </li>
           </ul>
           <section class="p-menu1">
@@ -36,12 +36,17 @@
               </label>
             
               <nav class="menu1">
-                <a class="link1" href="#whoWeAre">Ποιοί Είμαστε</a>
-                <a class="link1" href="#actions">Δράσεις</a>
-                <a class="link1" href="#help">Βοήθεια φοιτητών</a>
-                <a class="link1" href="#contact">Επικοινωνία</a>
+                <a class="link1" href="#">Βιοχημεία</a>
+                <a class="link1" href="#">Χημικές Ενώσεις</a>
+                <a class="link1" href="#">Χημεία στην Καθημερινότητα</a>
+                <a class="link1" href="../index.html">Πίσω στην Αρχική</a>
               </nav>
           </nav>
           </section>
         </nav>
       </header>
+      <section class="contentCards">
+        <p>No content has been added yet.</p>
+      </section>
+    </body>
+    </html>
