--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p>Είμαστε μια κοινότητα από φοιτητές του τμήματος Χημείας...</p>
         </div>
         <div class="subjectBlock subjectImg">
-        <img src="./Resources/Img/ChemistryFlasksClear.jpeg" class="blockImg"/>
+        <img src="./Resources/Img/LabPicture.jpg" class="blockImg"/>
       </div>
       </div>
       <div class="divider">
