added browse to nav bar

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <a class="link1" href="#actions">Δράσεις</a>
                 <a class="link1" href="#help">Βοήθεια φοιτητών</a>
                 <a class="link1" href="#contact">Επικοινωνία</a>
+                <a class="link1" href="./Main/content.html">Browse</a>
               </nav>
           </nav>
           </section>
